# SwarmSimulator

./: .gitignore  .travis.yml  configure_gtest.sh  convert.sh  draw_var_mutation.py  makefile  plot_ga_data.py  plot_ga_data_image_dump.py  plot_ga_data_image_view.py  plot_ga_data_meanSq_view.py  plot_ga_data_new.py  plot_ga_data_total_score.py  plot_vis_spread_line.py  process_json_file heatmap.py  process_json_file.py  readme.md
presets/: ants.sh  birds.sh  fish.sh
src/: Agent.cpp  Agent.h  AnalyseSearchSpace.cpp  DataCollector.cpp  Describe.cpp  Display.cpp  Display.h  Environment.cpp  Environment.h  EnvironmentStore.cpp  EnvironmentStore.h  Point2d.cpp  Point2d.h  SDL_functions.cpp  SDL_functions.h  Simulation.cpp  Simulation.h  SwarmValues.h  Vector2d.cpp  Vector2d.h  fastMath.cpp  fastMath.h  ga.cpp  main.cpp  timer.cpp  visSampler.cpp  visSpreadCalc.cpp
tests/: Agent_test.cpp  CMakeLists.txt  Makefile  Point2d_test.cpp  Vector2d_test.cpp  runAllTests.sh
visDataKnnFix/: five spread.json  five spread4.json  four spread.json  four spread4.json  one spread3.json  three spread.json  three spread3.json  three spread4.json  two spread.json  two spread3.json
